--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <head>
-<title>PYLR homepage</title>
+	<title>PYLR homepage</title>
 </head>
-<body>
-<p>
-Test text no micropenises allowed @nick suck my dick
-</p>
-<p>ur mum gey</p>
-</body>
+<div id="header">
+	<p>
+		Test text no micropenises allowed @nick suck my dick
+	</p>
+</div>
+<div id="navbar">
+
+</div>
+<div id="body">
+
+</div>
