--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <head>
-	<title>PYLR homepage</title>
+	<title>PYLR</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <div id="header">
-	<p>
-		Test
-	</p>
+	
 </div>
 <div id="navbar">
 
 </div>
 <div id="body">
+
+</div>
+<div id="footer">
 
 </div>
